refactor : FollowEntity 외래키 사용하도록 수정