@@ -6,15 +6,14 @@ import org.musicplace.follow.domain.FollowEntity;
 import org.musicplace.follow.dto.FollowSaveDto;
 import org.musicplace.follow.dto.FollowResponseDto;
 import org.musicplace.follow.repository.FollowRepository;
-import org.musicplace.global.security.authorizaion.MemberAuthorizationUtil;
 import org.musicplace.global.exception.ErrorCode;
 import org.musicplace.global.exception.ExceptionHandler;
+import org.musicplace.global.security.authorizaion.MemberAuthorizationUtil;
 import org.musicplace.user.domain.UserEntity;
 import org.musicplace.user.service.SignInService;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,80 +23,66 @@ public class FollowService {
     private final SignInService signInService;
 
     @Transactional
-    public Long FollowSave(FollowSaveDto followSaveDto) {
-        String member_id = MemberAuthorizationUtil.getLoginMemberId();
-        UserEntity userEntity = signInService.SignInFindById(member_id);
-        signInService.CheckSignInDelete(userEntity);
-        FollowCheck(followSaveDto.getTarget_id(), userEntity);
-        FollowEntity followEntity = FollowEntity.builder()
-                .target_id(followSaveDto.getTarget_id())
-                .nickname(followSaveDto.getNickname())
-                .profile_img_url(followSaveDto.getProfile_img_url())
+    public Long followSave(FollowSaveDto dto) {
+        String memberId = MemberAuthorizationUtil.getLoginMemberId();
+
+        UserEntity user = signInService.SignInFindById(memberId);
+        signInService.CheckSignInDelete(user);
+
+        if (memberId.equals(dto.getTarget_id())) {
+            throw new ExceptionHandler(ErrorCode.NOT_FOLLOW_SELF);
+        }
+
+        // 🔥 중복 팔로우 방지 (DB + 조회)
+        if (followRepository.existsByMemberIdAndTargetId(memberId, dto.getTarget_id())) {
+            throw new ExceptionHandler(ErrorCode.FOLLOW_SAME_ID);
+        }
+
+        FollowEntity follow = FollowEntity.builder()
+                .memberId(memberId)
+                .targetId(dto.getTarget_id())
+                .targetNickname(dto.getNickname())
+                .targetProfileImgUrl(dto.getProfile_img_url())
                 .build();
-        userEntity.getFollowEntities().add(followEntity);
-        followEntity.SignInEntity(userEntity);
-        followRepository.save(followEntity);
-        return followEntity.getFollow_id();
+
+        followRepository.save(follow);
+        return follow.getFollowId();
     }
 
     @Transactional
-    public void followDelete(Long follow_id) {
-        String member_id = MemberAuthorizationUtil.getLoginMemberId();
-        UserEntity userEntity = signInService.SignInFindById(member_id);
-        FollowEntity followEntity = followFindById(follow_id);
-        if (userEntity.getFollowEntities().contains(followEntity)) {
-            userEntity.getFollowEntities().remove(followEntity);
-            followRepository.delete(followEntity);
-        } else {
+    public void followDelete(Long followId) {
+        String memberId = MemberAuthorizationUtil.getLoginMemberId();
+
+        FollowEntity follow = followRepository.findById(followId)
+                .orElseThrow(() -> new ExceptionHandler(ErrorCode.FOLLOW_NOT_FOUND));
+
+        if (!follow.getMemberId().equals(memberId)) {
             throw new ExceptionHandler(ErrorCode.FOLLOW_NO_ID);
         }
+
+        followRepository.delete(follow);
     }
 
     public List<FollowResponseDto> followFindAll() {
-        String member_id = MemberAuthorizationUtil.getLoginMemberId();
-        UserEntity userEntity = signInService.SignInFindById(member_id);
-        List<FollowEntity> followEntities = userEntity.getFollowEntities();
-        List<FollowResponseDto> followResponseDtos = followEntities.stream()
-                .map(followEntity -> FollowResponseDto.builder()
-                        .follow_id(followEntity.getFollow_id())
-                        .target_id(followEntity.getTarget_id())
-                        .nickname(followEntity.getNickname())
-                        .profile_img_url(followEntity.getProfile_img_url())
+        String memberId = MemberAuthorizationUtil.getLoginMemberId();
+
+        return followRepository.findAllByMemberId(memberId)
+                .stream()
+                .map(f -> FollowResponseDto.builder()
+                        .follow_id(f.getFollowId())
+                        .target_id(f.getTargetId())
+                        .nickname(f.getTargetNickname())
+                        .profile_img_url(f.getTargetProfileImgUrl())
                         .build())
-                .collect(Collectors.toList());
-        return followResponseDtos;
+                .toList();
     }
 
-    public Long followCount() {
-        String member_id = MemberAuthorizationUtil.getLoginMemberId();
-        UserEntity userEntity = signInService.SignInFindById(member_id);
-        return userEntity.getFollowEntities().stream().count();
+    public long followCount() {
+        String memberId = MemberAuthorizationUtil.getLoginMemberId();
+        return followRepository.countByMemberId(memberId);
     }
 
-    public Long otherFollowCount(String otherMemberId) {
-        UserEntity userEntity = signInService.SignInFindById(otherMemberId);
-        return userEntity.getFollowEntities().stream().count();
+    public long otherFollowCount(String otherMemberId) {
+        return followRepository.countByTargetId(otherMemberId);
     }
-
-    public FollowEntity followFindById(Long target_id) {
-        FollowEntity followEntity = followRepository.findById(target_id)
-                .orElseThrow(() -> new ExceptionHandler(ErrorCode.FOLLOW_NOT_FOUND));
-        return followEntity;
-    }
-
-    public void FollowCheck(String targetId, UserEntity userEntity) {
-        List<FollowEntity> followEntities = userEntity.getFollowEntities();
-
-        for (FollowEntity target : followEntities) {
-            if (target.getTarget_id().equals(targetId)) {
-                throw new ExceptionHandler(ErrorCode.FOLLOW_SAME_ID);
-            }
-        }
-
-        if (userEntity.getMemberId().equals(targetId)) {
-            throw new ExceptionHandler(ErrorCode.NOT_FOLLOW_SELF);
-        }
-    }
-
-
 }
